--- a/static/build.css
+++ b/static/build.css
@@ -369,8 +369,8 @@ p:target {
 #gotop {
     position: fixed;
     z-index: 90;
-    right: 30px;
-    bottom: 31px;
+    right: 2%;
+    bottom: 8%;
     display: none;
     width: 50px;
     height: 50px;
